Fixed footer alignment.

--- a/styles.css
+++ b/styles.css
@@ -42,6 +42,10 @@ body {
     text-decoration: underline;
 }
 
+.item {
+    margin: 0 auto;
+}
+
 /* Navigation / Flexbox */
 .h-flexbox {
     display: flex;
